--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
         fragmentKtxVersion = '1.1.0-rc01'
         pagingVersion = '2.1.0'
         pagingRxVersion = '1.0.0-alpha1'
+        cardViewVersion = '1.0.0'
     }
 
     repositories {
